@@ -1,3 +1,10 @@
+2014-05-23  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/boundary.c:  A width adjustment for the length of the key title
+	was being applied to every column of entries in the key instead of just
+	once for the whole key.
+	Bugfix
+
 2014-05-11  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c (f_stringcolumn): Return an empty string if asked for
